DATE        AUTHOR    CHANGE
----------- --------- ---------------------------------------------------------
Jun-20-2002 allenb    XWin keyboard now only lock the mouse when Alt, Ctrl, 
                      or Shift is pressed (or the lock toggle key)
May-30-2002 patrickh  Enabled the Fakespace Pinch Glove and 5DT Data Glove
                      drivers on Win32.
                      NEW VERSION: 0.2.5
May-30-2002 patrickh  Enabled the Ascension Flock of BIrds and Immersion Tech
                      Interface Box drivers on Win32.
                      NEW VERSION: 0.2.4
May-29-2002 patrickh  Build a DLL on Win32.
May-23-2002 patrickh  Updated to use JCCL 0.2.0 API.
                      NEW VERSION: 0.2.3
May-22-2002 allenb    Updated to work with Boost 0.1.28.
May-17-2002 patrickh  Fixed a math bug causing bad tracking information from
                      positional devices.
                      NEW VERSION: 0.2.2
May-07-2002 patrickh  Changed the type of gadget::Input::mPort to be
                      std::string instead of char*.  Drivers that were relying
                      on this member have been updated, and code with
                      questionable memory safety has been fixed.
                      NEW VERSION: 0.2.1
Apr-29-2002 patrickh  Added a device driver for the 5DT Data Glove (submitted
                      by Chang Kim <changkim@vrac.iastate.edu>).
Apr-20-2002 patrickh  Enabled the Ascension MotionStar and Intersense IS-900
                      drivers on Win32.
Apr-09-2002 allenb    GMTL port.
                      NEW VERSION: 0.2.0
Mar-10-2002 patrickh  Renamed the class ibox2 to IboxStandalone.
Feb-24-2002 allenb    Added interface to Digital, Analog, and Position to
                      allow returning of current sample buffer.  This feature
                      had been overlooked in the original impl.
Feb-21-2002 allenb    Made SampleBuffers smarter in the way the swap.  Now